--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -15,7 +15,7 @@
 .contact__info {
     display: grid;
     row-gap: 1rem;
-    grid-template-columns: 300px;
+    grid-template-columns: 360px;
 }
 
 .contact__card {
